fix: changed alignement and position stacking

--- a/src/App.css
+++ b/src/App.css
@@ -121,13 +121,15 @@ a {
     display: flex;
     position: absolute;
     margin-top: 6rem;
-    z-index: 2;
+    opacity: 1;
+    z-index: 6;
     width: 100%;
     height: 100%;
     background: var(--heading-color);
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
+    transition: all 0.5s ease;
   }
 
   .grid-col:nth-child(1) {
