--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.home-container > * {
+  margin: 1rem 0;
+}
+
 .home-container .text-primary {
   display: flex;
   flex-wrap: wrap;
